# customers-data-updater

./: .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: celery_app.py  config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  batch.py  conversation.py  mapping.py  opt_out.py  tenant.py  usage.py
app/routers/: auth.py  batches.py  conversations.py  dead_letter.py  erasure.py  export.py  mappings.py  tenants.py  upload.py  usage.py
app/schemas/: auth.py  batch.py  conversation.py  mapping.py  tenant.py  usage.py
app/services/: ai_conversation.py  auth.py  column_mapper.py  dedup.py  entity_validator.py  erasure.py  export.py  file_parser.py  outreach.py  processing.py  storage.py  usage.py  whatsapp.py
app/tasks/: outreach.py  processing.py
tests/: conftest.py
tests/integration/: test_auth_flow.py  test_column_learning.py  test_dead_letter_flow.py  test_dedup_flow.py  test_e2e_flow.py  test_large_file.py  test_opt_out_flow.py  test_tenant_isolation.py
tests/unit/: test_ai_conversation.py  test_audit.py  test_batch_review.py  test_column_mapper.py  test_dead_letter.py  test_dedup.py  test_entity_validator.py  test_export.py  test_file_parser.py  test_opt_out.py  test_processing.py  test_usage.py
